--- a/src/Components/colorGenerator.css
+++ b/src/Components/colorGenerator.css
@@ -254,3 +254,64 @@ color: #FFFFFF;
     border: none;
     background: none;
 }
+
+@media (min-width: 320px) and (max-width: 1920px){
+    h1{  
+        position: absolute;
+        width: 290px;
+        height: 31px;
+        left: 80px;
+        top: 14px;
+        z-index: 1;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 36px;
+        
+        color: #FFFFFF;}
+    .div_color_picker{
+        position: absolute;
+        width: 261px;
+        height: 97px;
+        left: 64px;
+        top: 169px;
+
+        background: #FFFFFF;
+        box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+    }
+    .circle{
+        box-sizing: border-box;
+        width: 50px;
+        height: 50px;
+        left: 20px;
+        right: 1047px;
+        top: 88px;
+        border-radius:50%;
+        margin-right: 25px;
+    
+        background: linear-gradient(130.53deg, #404040 17.47%, #404040 27.71%, #B0B0B0 27.72%, #B0B0B0 36.75%, #404040 36.76%, #404040 45.49%, #B0B0B0 45.5%, #B0B0B0 54.23%, #404040 54.24%, #404040 63.27%, #B0B0B0 63.27%, #B0B0B0 71.71%, #404040 71.71%);
+        border: 3px solid #FFFFFF;
+    }
+    .name{
+        top:287px;
+        left:17px;
+    }
+    .input_color{
+        top: 316px;
+        left: 17px;
+    }
+    .saved_palettes{
+        top: 401px;
+        left: 17px;
+    }
+    .color_container{
+        top: 478px;
+        left: 17px;
+    }
+    .add_color{
+        top:316px;
+        left: 303px;
+    }
+}
