--- a/src/Components/colorGenerator.css
+++ b/src/Components/colorGenerator.css
@@ -255,7 +255,7 @@ color: #FFFFFF;
     background: none;
 }
 
-@media (min-width: 320px) and (max-width: 1920px){
+@media only screen and (min-width: 320px) and (max-width: 1200px) {
     h1{  
         position: absolute;
         width: 290px;
@@ -271,15 +271,8 @@ color: #FFFFFF;
         
         color: #FFFFFF;}
     .div_color_picker{
-        position: absolute;
-        width: 261px;
-        height: 97px;
         left: 64px;
         top: 169px;
-
-        background: #FFFFFF;
-        box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.25);
-        border-radius: 10px;
     }
     .circle{
         box-sizing: border-box;
